i18n/ja/docusaurus-plugin-content-docs/version-0.9.x/keybindings.md
---
sidebar_position: 4
description: Gitti のキーバインディング一覧 — グローバル、ナビゲーション、ブランチ、ファイル、コミットログ、スタッシュ、reflog、タグ、リモート、worktree、ポップアップのショートカット。
keywords:
  - gitti キーバインディング
  - gitti ショートカット
  - git tui キーボードショートカット
  - キーボード駆動 git
  - git tui ホットキー
---

# キーバインディングリファレンス

このページでは、Gitti で利用可能なすべてのキーバインディングをコンテキストとシナリオ別に整理して記載しています。

## 凡例

- **`*`** = グローバルキーバインディング（ポップアップが開いていない時、すべてのコンテキストで機能）
- **`* [!!]`** = グローバルキーバインディングで**ポップアップが開いている時でも機能**

## グローバルキーバインディング

| キー           | マーカー | アクション                               | 備考                                           |
| :------------- | :------- | :--------------------------------------- | :--------------------------------------------- |
| `ctrl+c`       | `* [!!]` | Gitti を終了                             | 強制終了、ポップアップ内でも機能               |
| `-`            | `*`      | パネル幅を縮小                           | 左側のパネルを縮小                             |
| `+`            | `*`      | パネル幅を拡大                           | 左側のパネルを拡大                             |
| `ctrl+s`       | `* [!!]` | すべてのファイルをステージ               | 変更されたすべてのファイルをステージ           |
| `ctrl+u`       | `* [!!]` | すべてのファイルをアンステージ           | ステージされたすべてのファイルをアンステージ   |
| `ctrl+g`       | `* [!!]` | 作者の GitHub を開く                     | ブラウザで作者の GitHub を開く                 |
| `ctrl+l`       | `* [!!]` | 作者の LinkedIn を開く                   | ブラウザで作者の LinkedIn を開く               |
| `q` または `Q` | `*`      | Gitti を終了                             | ポップアップが開いていない時のみ機能           |
| `?`            | `*`      | グローバルキーバインディングヘルプを開く | ポップアップですべてのキーバインディングを表示 |
| `C`            | `*`      | 操作を継続 (Continue)                    | 汎用的な継続操作 (rebase, merge, cherry-pick)  |
| `ctrl+a`       | `*`      | 操作を中止 (Abort)                       | 汎用的な中止操作 (rebase, merge, cherry-pick)  |
| `ctrl+f`       | `*`      | すべてフェッチ                           | 手動ですべてフェッチ                           |
| `b`            | `*`      | Git Blame                                | 追跡ファイルの Blame ポップアップを開く        |
| `O`            | `*`      | リポジトリをエディタで開く               | 設定したエディタで現在のリポジトリを開く       |

## コンポーネントナビゲーション

| キー        | アクション                           | 備考                                 |
| :---------- | :----------------------------------- | :----------------------------------- |
| `1`         | ローカルブランチパネルにフォーカス   | ブランチリストにフォーカスを切り替え |
| `2`         | 変更されたファイルパネルにフォーカス | ファイルリストにフォーカスを切り替え |
| `3`         | コミットログ / RefLog パネルにフォーカス | コミットログ / RefLog にフォーカスを切り替え |
| `4`         | Stash パネルにフォーカス                 | Stash リストにフォーカスを切り替え          |
| `/`         | ログコンポーネントパネルにフォーカス     | アプリケーションログにフォーカスを切り替え  |
| `tab`       | コンポーネントを順方向に切り替え         | 次のパネルに移動                            |
| `shift+tab` | コンポーネントを逆方向に切り替え         | 前のパネルに移動                            |

## リストナビゲーション

| キー           | コンテキスト           | アクション                    |
| :------------- | :--------------------- | :---------------------------- |
| `↑` または `k` | 任意のリストパネル     | 上に移動 / 前のアイテムを選択 |
| `↓` または `j` | 任意のリストパネル     | 下に移動 / 次のアイテムを選択 |
| `↑` または `k` | ポップアップ選択リスト | 前のオプションに移動          |
| `↓` または `j` | ポップアップ選択リスト | 次のオプションに移動          |

## リストフィルター

`F` を押すと、フォーカスされているリストパネルをフィルターできます。各リストは自身のフィルター文字列を保持します。

| キー        | アクション             | 備考                                                                                       |
| :---------- | :--------------------- | :----------------------------------------------------------------------------------------- |
| `F`         | フィルターを開始       | ローカルブランチ / タグ / リモート / Worktree、変更されたファイル、コミットログ / RefLog、Stash |
| 任意の文字  | フィルター文字列に追加 | キーを押すたびにリストを絞り込み                                                            |
| `backspace` | 最後の文字を削除       | キーを押すたびにリストを絞り込み                                                            |
| `enter`     | 適用して終了           | フィルター文字列を保持し、他のキーは通常の動作に戻る                                        |
| `esc`       | 消去して終了           | フィルター文字列を消去し、リスト全体を復元                                                  |

- フィルターは、リスト項目のテキストに対する**大文字小文字を区別しない部分一致**です。
- 現在のフィルター文字列は、パネルの項目カウンターの横に表示されます（例: `3/10  /feat`）。
- フィルター文字列の入力中は、他のキーバインディングは動作しません。先に `enter` または `esc` を押してください。
- `enter` を押した後もフィルターは適用されたままです。消去するには、もう一度 `F` を押してから `esc` を押します。
- ポップアップが開いている時と行編集モードの時は、`F` は動作しません。

## マウスサポート

| 操作                             | 結果                                                             |
| :------------------------------- | :--------------------------------------------------------------- |
| 左パネルを左クリック             | そのパネルにフォーカスし、クリックしたリスト項目を選択            |
| 詳細パネルを左クリック           | 詳細パネルにフォーカス。`esc` でリストパネルに戻る                |
| ログパネルを左クリック           | ログパネルにフォーカス                                            |
| ホイールを上 / 下にスクロール    | フォーカス中の詳細パネル、または開いているポップアップをスクロール |
| ホイールを左 / 右にスクロール    | 同じ内容を横方向にスクロール                                      |

- ポップアップが開いている時、行編集モードの時、フィルター文字列の入力中は、クリックは無視されます。
- ポップアップが開いている時もホイールは動作します。

## 詳細パネルのスクロール

| キー           | アクション     | コンテキスト         |
| :------------- | :------------- | :------------------- |
| `↑` または `k` | 上にスクロール | 詳細コンポーネント内 |
| `↓` または `j` | 下にスクロール | 詳細コンポーネント内 |
| `←` または `h` | 左にスクロール | 詳細コンポーネント内 |
| `→` または `l` | 右にスクロール | 詳細コンポーネント内 |

## ローカルブランチパネル

| キー    | アクション                     | 場合                                           |
| :------ | :----------------------------- | :--------------------------------------------- |
| `< / >` | コンポーネントパネルの切り替え | ローカルブランチ、タグ、リモート、Worktree 間を切り替え   |
| `n`     | 新しいブランチを作成           | ブランチ作成フローを開く                       |
| `enter` | 選択したブランチに切り替え     | 必要に応じてブランチ切り替えポップアップを開く |
| `d`     | 選択したブランチを削除         | ブランチを削除（必要に応じて確認あり）         |
| `r`     | 別のブランチにリベース         | チェックアウト済みブランチのみ動作             |
| `m`     | 現在のブランチにブランチをマージ | 複数ブランチマージセレクターを開く            |
| `F`     | ブランチリストをフィルター       | 入力してフィルター、`enter` で適用、`esc` で消去 |

## 変更されたファイルパネル

| キー    | アクション                      | 場合                                                                           |
| :------ | :------------------------------ | :----------------------------------------------------------------------------- |
| `space` | ステージ/アンステージを切り替え | ファイルをステージとアンステージ間で切り替え                                   |
| `e`     | ファイルを編集                  | 外部エディタ/ターミナルでファイルを開く                                        |
| `enter` | ファイルの差分を表示            | 詳細パネルに差分を表示                                                         |
| `r`     | コンフリクトを解決              | コンフリクト解決オプションを開く（コンフリクトが発生しているファイルのみ表示） |
| `d`     | 変更を破棄                      | 破棄確認フローを開く                                                           |
| `s`     | 選択したファイルを Stash        | Stash メッセージ入力ポップアップを開く                                         |
| `S`     | すべてのファイルを Stash        | Stash メッセージ入力ポップアップを開く                                         |
| `c`     | コミット                        | コミットポップアップを開く                                                     |
| `A`     | コミットを修正                  | 修正コミットポップアップを開く                                                 |
| `F`     | ファイルリストをフィルター      | 入力してフィルター、`enter` で適用、`esc` で消去                               |

## コミットログパネル

| キー     | アクション                 | 備考                                               |
| :------- | :------------------------- | :------------------------------------------------- |
| `< / >`  | RefLog に切り替え          | RefLog パネルに切り替え                            |
| `r`      | 選択したコミットをリセット | リセットオプションを開く（Soft/Mixed/Hard）        |
| `R`      | 最新のコミットをリセット   | HEAD のリセットオプションを開く（Soft/Mixed/Hard） |
| `ctrl+r` | コミットをリバート         | コミットのリバートオプションを開く                 |
| `t`      | タグを作成                 | タグ作成メニューを開く                             |
| `ctrl+p` | チェリーピックモード       | チェリーピック選択モードに入る                     |
| `i`      | インタラクティブリベース   | インタラクティブリベース操作セレクターを開く       |
| `enter`  | コミット詳細を表示         | 詳細パネルにコミットの差分を表示                   |
| `F`      | コミットログをフィルター   | 入力してフィルター、`enter` で適用、`esc` で消去   |

## RefLog パネル

| キー     | アクション                             | 備考                                        |
| :------- | :------------------------------------- | :------------------------------------------ |
| `< / >`  | コミットログに切り替え                 | コミットログパネルに切り替え                |
| `↑ or k` | 前のエントリに移動                     |                                             |
| `↓ or j` | 次のエントリに移動                     |                                             |
| `enter`  | エントリ詳細を表示                     | 詳細パネルにエントリ情報を表示              |
| `n`      | コミットハッシュから新しいブランチを作成 | ブランチ名入力ポップアップを開く           |
| `r`      | 選択したコミットにリセット             | リセットオプションを開く（Soft/Mixed/Hard） |
| `ctrl+p` | 現在のブランチにチェリーピックして適用 | チェリーピック確認ポップアップを開く        |
| `F`      | RefLog リストをフィルター              | 入力してフィルター、`enter` で適用、`esc` で消去 |

## Stash パネル

| キー        | アクション     | 場合                             |
| :---------- | :------------- | :------------------------------- |
| `space`     | Stash を適用   | Stash を適用するがリストには残す |
| `backspace` | Stash をポップ | Stash を適用してリストから削除   |
| `d`         | Stash を削除   | Stash を完全に削除               |
| `F`         | Stash リストをフィルター | 入力してフィルター、`enter` で適用、`esc` で消去 |

## ログパネル

| キー | アクション         | 備考                                           |
| :--- | :----------------- | :--------------------------------------------- |
| `e`  | ログのエクスポート | ログの内容をダウンロードフォルダにエクスポート |

## タグパネル

| キー     | アクション                     | 場合                                         |
| :------- | :----------------------------- | :------------------------------------------- |
| `< / >`  | コンポーネントパネルの切り替え | ローカルブランチ、タグ、リモート、Worktree 間を切り替え |
| `d`      | タグを削除                     | タグ削除メニューを開く                       |
| `ctrl+p` | タグをプッシュ                 | タグプッシュメニューを開く                   |
| `f`      | タグをフェッチ                 | タグフェッチメニューを開く                   |
| `F`      | タグリストをフィルター         | 入力してフィルター、`enter` で適用、`esc` で消去 |
| `?`      | キーバインディングと手順       | 専用ヘルプポップアップを開く                 |

## リモート操作

| キー | アクション | 場合                                                      |
| :--- | :--------- | :-------------------------------------------------------- |
| `p`  | プッシュ   | プッシュフローを開く（リモート選択 → プッシュオプション） |
| `P`  | プル       | プルフローを開く（プルタイプ選択）                        |

## リモートパネル

| キー    | アクション                         | 場合                                         |
| :------ | :--------------------------------- | :------------------------------------------- |
| `< / >` | コンポーネントパネルの切り替え     | ローカルブランチ、タグ、リモート、Worktree 間を切り替え |
| `n`     | 新しいリモート                     | リモート追加フローを開く                     |
| `d`     | リモートを削除                     | 設定されたリモートを削除する                 |
| `e`     | リモートを編集                     | リモート編集フローを開く                     |
| `enter` | トラッキングアップストリームに設定 | 現在のリモートをアップストリームとして設定   |
| `F`     | リモートリストをフィルター         | 入力してフィルター、`enter` で適用、`esc` で消去 |
| `?`     | キーバインディングと手順           | 専用ヘルプポップアップを開く                 |

## Worktree パネル

| キー        | アクション                     | 場合                                                     |
| :---------- | :----------------------------- | :------------------------------------------------------- |
| `< / >`     | コンポーネントパネルの切り替え | ローカルブランチ、タグ、リモート、Worktree 間を切り替え  |
| `enter`     | Worktree を切り替え            | 選択した Worktree に切り替え                             |
| `n`         | 新しい Worktree                | Worktree 追加フローを開く（名前 + 任意のブランチ）       |
| `backspace` | Worktree を削除                | 削除確認ポップアップを開く                               |
| `o`         | Worktree をロック / アンロック | ロック状態を切り替え（メイン Worktree では利用不可）     |
| `ctrl+p`    | Worktree をプルーン            | 古い/欠落した Worktree の参照を削除                      |
| `F`         | Worktree リストをフィルター    | 入力してフィルター、`enter` で適用、`esc` で消去         |
| `?`         | キーバインディングと手順       | 専用ヘルプポップアップを開く                             |

## ポップアップキーバインディング

### テキスト入力ポップアップ

_適用対象: コミット、コミット修正、リモート追加、ブランチ作成、Stash メッセージ、Worktree 追加、Worktree ロック理由_

| キー        | アクション     | 備考                                                               |
| :---------- | :------------- | :----------------------------------------------------------------- |
| `ctrl+e`    | 送信           | フォームを送信（複数行テキストエリア用）                           |
| `ctrl+p`    | 貼り付け       | クリップボードからテキストを貼り付け                               |
| `ctrl+y`    | コピー         | 選択したテキストをクリップボードにコピー                           |
| `enter`     | 送信           | 単一行入力のみ（ブランチ名、Stash メッセージ、リモートフィールド） |
| `esc`       | キャンセル     | 保存せずにポップアップを閉じる                                     |
| `tab`       | 次のフィールド | 次の入力フィールドに移動（複数フィールドがある場合）               |
| `shift+tab` | 前のフィールド | 前の入力フィールドに移動（複数フィールドがある場合）               |

---

### 選択ポップアップ

_適用対象: ブランチタイプ、切り替えタイプ、プッシュタイプ、プルタイプ、リモート選択、破棄タイプ、コンフリクト解決タイプ_

| キー           | アクション | 備考                                 |
| :------------- | :--------- | :----------------------------------- |
| `↑` または `k` | 上に移動   | 前のオプションを選択                 |
| `↓` または `j` | 下に移動   | 次のオプションを選択                 |
| `enter`        | 選択を確定 | 選択したオプションで続行             |
| `esc`          | キャンセル | アクションなしでポップアップを閉じる |

---

### 出力/結果ポップアップ

_適用対象: プッシュ出力、プル出力、ブランチ切り替え出力_

| キー  | アクション           | 備考                     |
| :---- | :------------------- | :----------------------- |
| `esc` | ポップアップを閉じる | 出力ポップアップを閉じる |

---

### キーバインディングヘルプポップアップ

| キー           | アクション     | 備考                                 |
| :------------- | :------------- | :----------------------------------- |
| `↑` または `k` | 上にスクロール | キーバインディングリストをスクロール |
| `↓` または `j` | 下にスクロール | キーバインディングリストをスクロール |
| `esc`          | ヘルプを閉じる | ヘルプポップアップを閉じる           |

## 詳細ビュー（右パネル）

| キー           | アクション               | 備考                                                   |
| :------------- | :----------------------- | :----------------------------------------------------- |
| `esc`          | リストに戻る             | 詳細ビューを終了し、リストパネルにフォーカスを戻す     |
| `↑` または `k` | 上にスクロール           | 差分コンテンツを上にスクロール                         |
| `↓` または `j` | 下にスクロール           | 差分コンテンツを下にスクロール                         |
| `←` または `h` | 左にスクロール           | 差分コンテンツを左にスクロール                         |
| `→` または `l` | 右にスクロール           | 差分コンテンツを右にスクロール                         |
| `[`            | 前の分割パネル           | ステージ/アンステージビューの切り替え                  |
| `]`            | 次の分割パネル           | ステージ/アンステージビューの切り替え                  |
| `L`            | 行ステージングの切り替え | 個別の行ステージングモードの開始/終了 (ファイル閲覧時) |
| `space`        | 行をステージ/アンステージ | 選択した行をステージ/アンステージ（行編集モード時）   |
| `d`            | 行を破棄                  | 選択した行を破棄（行編集モード時）                    |

## まとめ

- **`* [!!]`** キーバインディングはポップアップ内を含めてどこでも機能
- **`*`** キーバインディングはグローバルに機能するがポップアップが開いている時は機能しない
- **コンテキスト固有のキーバインディング**はそれぞれのパネルでのみ機能
- **ポップアップキーバインディング**はポップアップタイプ（テキスト入力 vs 選択 vs 出力）に依存
- **`esc`**はポップアップを閉じるまたは詳細ビューを終了する普遍的な方法
- **`F`** はフォーカスされているリストパネルをフィルターし、各リストは自身のフィルター文字列を保持
- **マウス**のクリックでパネルにフォーカスしリスト項目を選択、ホイールで詳細パネルとポップアップをスクロール
